增加emacs配置即时生效帮助

--- a/decoration.html
+++ b/decoration.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-04-21 周日 00:24 -->
+<!-- 2020-03-24 周二 10:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>装修日记</title>
@@ -235,55 +235,55 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc40f6ae">1. 验房</a>
+<li><a href="#orge4b6d97">1. 验房</a>
 <ul>
-<li><a href="#org9c75b8d">1.1. 证件</a></li>
-<li><a href="#org1f63fdd">1.2. 工具</a></li>
-<li><a href="#org1763d62">1.3. 流程</a></li>
+<li><a href="#org497e054">1.1. 证件</a></li>
+<li><a href="#org8cc30a1">1.2. 工具</a></li>
+<li><a href="#orge9e1c29">1.3. 流程</a></li>
 </ul>
 </li>
-<li><a href="#org1ad86f3">2. 装修</a>
+<li><a href="#org7c5da34">2. 装修</a>
 <ul>
-<li><a href="#orga656c0e">2.1. 装修流程</a></li>
-<li><a href="#org71e880b">2.2. 设计师的服务流程</a></li>
-<li><a href="#org090b76e">2.3. 设计师的收费方式和内容</a></li>
-<li><a href="#org3a2dec6">2.4. 施工队进度表</a></li>
-<li><a href="#orge082879">2.5. 常用单位换算</a></li>
-<li><a href="#orgc536e77">2.6. 空间</a>
+<li><a href="#orgcecbde5">2.1. 装修流程</a></li>
+<li><a href="#org96193a4">2.2. 设计师的服务流程</a></li>
+<li><a href="#org90af848">2.3. 设计师的收费方式和内容</a></li>
+<li><a href="#org8c10852">2.4. 施工队进度表</a></li>
+<li><a href="#orgff49244">2.5. 常用单位换算</a></li>
+<li><a href="#orgf7d2e3b">2.6. 空间</a>
 <ul>
-<li><a href="#orgbe4691e">2.6.1. 测量前的准备</a></li>
-<li><a href="#orgd28c160">2.6.2. 卧室</a></li>
+<li><a href="#org59a673f">2.6.1. 测量前的准备</a></li>
+<li><a href="#org3056e8c">2.6.2. 卧室</a></li>
 </ul>
 </li>
-<li><a href="#org0d75f68">2.7. 合同</a>
+<li><a href="#orgd7ec39d">2.7. 合同</a>
 <ul>
-<li><a href="#org6f27786">2.7.1. 设计合同</a></li>
-<li><a href="#org2a79647">2.7.2. 施工合同</a></li>
+<li><a href="#orga5b3657">2.7.1. 设计合同</a></li>
+<li><a href="#orgd261bcb">2.7.2. 施工合同</a></li>
 </ul>
 </li>
-<li><a href="#orgc8ad2e1">2.8. 建材</a>
+<li><a href="#org6648b5c">2.8. 建材</a>
 <ul>
-<li><a href="#org61a2f57">2.8.1. 木质地板</a></li>
-<li><a href="#org4a1acc3">2.8.2. 石材</a></li>
-<li><a href="#org95e70af">2.8.3. 瓷砖</a></li>
-<li><a href="#org60e038d">2.8.4. 地毯</a></li>
-<li><a href="#org47a4013">2.8.5. 涂料</a></li>
-<li><a href="#org9673d80">2.8.6. 壁饰类</a></li>
-<li><a href="#orgdf55a18">2.8.7. 玻璃类</a></li>
-<li><a href="#org832f160">2.8.8. 料理台</a></li>
-<li><a href="#org8c6c2aa">2.8.9. 水槽</a></li>
+<li><a href="#orgf00c995">2.8.1. 木质地板</a></li>
+<li><a href="#org0036a6a">2.8.2. 石材</a></li>
+<li><a href="#orgdeaca0f">2.8.3. 瓷砖</a></li>
+<li><a href="#orgd6395cc">2.8.4. 地毯</a></li>
+<li><a href="#orgaf33644">2.8.5. 涂料</a></li>
+<li><a href="#org1e94ec5">2.8.6. 壁饰类</a></li>
+<li><a href="#org70502d4">2.8.7. 玻璃类</a></li>
+<li><a href="#org3e763e9">2.8.8. 料理台</a></li>
+<li><a href="#orgd23dbc3">2.8.9. 水槽</a></li>
 </ul>
 </li>
-<li><a href="#org6bf393f">2.9. 监工表单</a>
+<li><a href="#orgf3d5688">2.9. 监工表单</a>
 <ul>
-<li><a href="#orgfd70a3e">2.9.1. 石材监工检查表单</a></li>
+<li><a href="#org4af6839">2.9.1. 石材监工检查表单</a></li>
 </ul>
 </li>
-<li><a href="#orgca4acc7">2.10. 插座开关灯</a></li>
-<li><a href="#org3f25136">2.11. 家具</a>
+<li><a href="#org581460c">2.10. 插座开关灯</a></li>
+<li><a href="#orgfe0b700">2.11. 家具</a>
 <ul>
-<li><a href="#org6b0776e">2.11.1. 桌子</a></li>
-<li><a href="#org23d9b65">2.11.2. 床</a></li>
+<li><a href="#org0b5ff0d">2.11.1. 桌子</a></li>
+<li><a href="#org5b0bb9a">2.11.2. 床</a></li>
 </ul>
 </li>
 </ul>
@@ -295,19 +295,19 @@ for the JavaScript code in this tag.
 <h2>List of Tables</h2>
 <div id="text-list-of-tables">
 <ul>
-<li><a href="#org0611b18"><span class="table-number">Table 1:</span> 设计师收费方式</a></li>
-<li><a href="#org9b62836"><span class="table-number">Table 2:</span> 工程进度表</a></li>
-<li><a href="#org047b1b8"><span class="table-number">Table 3:</span> 单位换算</a></li>
+<li><a href="#org999be52"><span class="table-number">Table 1:</span> 设计师收费方式</a></li>
+<li><a href="#org91e23b5"><span class="table-number">Table 2:</span> 工程进度表</a></li>
+<li><a href="#orgc5c861d"><span class="table-number">Table 3:</span> 单位换算</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgc40f6ae" class="outline-2">
-<h2 id="orgc40f6ae"><span class="section-number-2">1</span> 验房</h2>
+<div id="outline-container-orge4b6d97" class="outline-2">
+<h2 id="orge4b6d97"><span class="section-number-2">1</span> 验房</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org9c75b8d" class="outline-3">
-<h3 id="org9c75b8d"><span class="section-number-3">1.1</span> 证件</h3>
+<div id="outline-container-org497e054" class="outline-3">
+<h3 id="org497e054"><span class="section-number-3">1.1</span> 证件</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 在签合同时增加这样的约定：“交房时，应先验房然后办收房手续”，如果当初没有来得及在合同上约定，则可在收楼文件中注明“房内
@@ -322,8 +322,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org1f63fdd" class="outline-3">
-<h3 id="org1f63fdd"><span class="section-number-3">1.2</span> 工具</h3>
+<div id="outline-container-org8cc30a1" class="outline-3">
+<h3 id="org8cc30a1"><span class="section-number-3">1.2</span> 工具</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li>量具：5m盒尺、25~33cm直角尺、50~60cm丁字尺、1m直尺；</li>
@@ -344,8 +344,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org1763d62" class="outline-3">
-<h3 id="org1763d62"><span class="section-number-3">1.3</span> 流程</h3>
+<div id="outline-container-orge9e1c29" class="outline-3">
+<h3 id="orge9e1c29"><span class="section-number-3">1.3</span> 流程</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li>检查厨房烟道：用纸卷点火后灭火冒烟，放在烟道口下方10厘米左右，看烟是否上升到烟道口立即拐弯吸走；</li>
@@ -373,16 +373,16 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-org1ad86f3" class="outline-2">
-<h2 id="org1ad86f3"><span class="section-number-2">2</span> 装修</h2>
+<div id="outline-container-org7c5da34" class="outline-2">
+<h2 id="org7c5da34"><span class="section-number-2">2</span> 装修</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 装修原则：轻装修，重装饰, 一般包括：水电改造，贴砖，刷墙，做厨房，卫生间吊
 顶，橱柜等； 
 </p>
 </div>
-<div id="outline-container-orga656c0e" class="outline-3">
-<h3 id="orga656c0e"><span class="section-number-3">2.1</span> 装修流程</h3>
+<div id="outline-container-orgcecbde5" class="outline-3">
+<h3 id="orgcecbde5"><span class="section-number-3">2.1</span> 装修流程</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 按照时间顺序大体30步多：
@@ -421,8 +421,8 @@ for the JavaScript code in this tag.
 </ol>
 </div>
 </div>
-<div id="outline-container-org71e880b" class="outline-3">
-<h3 id="org71e880b"><span class="section-number-3">2.2</span> 设计师的服务流程</h3>
+<div id="outline-container-org96193a4" class="outline-3">
+<h3 id="org96193a4"><span class="section-number-3">2.2</span> 设计师的服务流程</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>现场勘查及丈量空间尺寸</li>
@@ -438,10 +438,10 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org090b76e" class="outline-3">
-<h3 id="org090b76e"><span class="section-number-3">2.3</span> 设计师的收费方式和内容</h3>
+<div id="outline-container-org90af848" class="outline-3">
+<h3 id="org90af848"><span class="section-number-3">2.3</span> 设计师的收费方式和内容</h3>
 <div class="outline-text-3" id="text-2-3">
-<table id="org0611b18" border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+<table id="org999be52" border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 <caption class="t-above"><span class="table-number">Table 1:</span> 设计师收费方式</caption>
 
 <colgroup>
@@ -494,10 +494,10 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-org3a2dec6" class="outline-3">
-<h3 id="org3a2dec6"><span class="section-number-3">2.4</span> 施工队进度表</h3>
+<div id="outline-container-org8c10852" class="outline-3">
+<h3 id="org8c10852"><span class="section-number-3">2.4</span> 施工队进度表</h3>
 <div class="outline-text-3" id="text-2-4">
-<table id="org9b62836" border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+<table id="org91e23b5" border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 <caption class="t-above"><span class="table-number">Table 2:</span> 工程进度表</caption>
 
 <colgroup>
@@ -918,10 +918,10 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-orge082879" class="outline-3">
-<h3 id="orge082879"><span class="section-number-3">2.5</span> 常用单位换算</h3>
+<div id="outline-container-orgff49244" class="outline-3">
+<h3 id="orgff49244"><span class="section-number-3">2.5</span> 常用单位换算</h3>
 <div class="outline-text-3" id="text-2-5">
-<table id="org047b1b8" border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+<table id="orgc5c861d" border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 <caption class="t-above"><span class="table-number">Table 3:</span> 单位换算</caption>
 
 <colgroup>
@@ -1091,12 +1091,12 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-orgc536e77" class="outline-3">
-<h3 id="orgc536e77"><span class="section-number-3">2.6</span> 空间</h3>
+<div id="outline-container-orgf7d2e3b" class="outline-3">
+<h3 id="orgf7d2e3b"><span class="section-number-3">2.6</span> 空间</h3>
 <div class="outline-text-3" id="text-2-6">
 </div>
-<div id="outline-container-orgbe4691e" class="outline-4">
-<h4 id="orgbe4691e"><span class="section-number-4">2.6.1</span> 测量前的准备</h4>
+<div id="outline-container-org59a673f" class="outline-4">
+<h4 id="org59a673f"><span class="section-number-4">2.6.1</span> 测量前的准备</h4>
 <div class="outline-text-4" id="text-2-6-1">
 <ul class="org-ul">
 <li>卷尺：5米长；</li>
@@ -1106,8 +1106,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd28c160" class="outline-4">
-<h4 id="orgd28c160"><span class="section-number-4">2.6.2</span> 卧室</h4>
+<div id="outline-container-org3056e8c" class="outline-4">
+<h4 id="org3056e8c"><span class="section-number-4">2.6.2</span> 卧室</h4>
 <div class="outline-text-4" id="text-2-6-2">
 <ul class="org-ul">
 <li>至少要10平米；</li>
@@ -1116,8 +1116,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-org0d75f68" class="outline-3">
-<h3 id="org0d75f68"><span class="section-number-3">2.7</span> 合同</h3>
+<div id="outline-container-orgd7ec39d" class="outline-3">
+<h3 id="orgd7ec39d"><span class="section-number-3">2.7</span> 合同</h3>
 <div class="outline-text-3" id="text-2-7">
 <p>
 合同中定金不可退，订金可以退；避免在装修过程中不停增加预算，必要时可以在合同预算清单中约定“设计方案微调的情况下，允许实
@@ -1144,16 +1144,16 @@ for the JavaScript code in this tag.
 </ul></li>
 </ul>
 </div>
-<div id="outline-container-org6f27786" class="outline-4">
-<h4 id="org6f27786"><span class="section-number-4">2.7.1</span> 设计合同</h4>
+<div id="outline-container-orga5b3657" class="outline-4">
+<h4 id="orga5b3657"><span class="section-number-4">2.7.1</span> 设计合同</h4>
 <div class="outline-text-4" id="text-2-7-1">
 <p>
 同设计师签的合同；
 </p>
 </div>
 </div>
-<div id="outline-container-org2a79647" class="outline-4">
-<h4 id="org2a79647"><span class="section-number-4">2.7.2</span> 施工合同</h4>
+<div id="outline-container-orgd261bcb" class="outline-4">
+<h4 id="orgd261bcb"><span class="section-number-4">2.7.2</span> 施工合同</h4>
 <div class="outline-text-4" id="text-2-7-2">
 <p>
 同施工方签的合同，施工合同一般都含监工；
@@ -1161,12 +1161,12 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-orgc8ad2e1" class="outline-3">
-<h3 id="orgc8ad2e1"><span class="section-number-3">2.8</span> 建材</h3>
+<div id="outline-container-org6648b5c" class="outline-3">
+<h3 id="org6648b5c"><span class="section-number-3">2.8</span> 建材</h3>
 <div class="outline-text-3" id="text-2-8">
 </div>
-<div id="outline-container-org61a2f57" class="outline-4">
-<h4 id="org61a2f57"><span class="section-number-4">2.8.1</span> 木质地板</h4>
+<div id="outline-container-orgf00c995" class="outline-4">
+<h4 id="orgf00c995"><span class="section-number-4">2.8.1</span> 木质地板</h4>
 <div class="outline-text-4" id="text-2-8-1">
 <ul class="org-ul">
 <li>实木地板：厚度1.5~2.1厘米的整块原木切割而成，天然木纹清晰，但天然的木头表面不耐磨。出入频繁易沾灰的玄关不适合；浴室门
@@ -1178,8 +1178,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org4a1acc3" class="outline-4">
-<h4 id="org4a1acc3"><span class="section-number-4">2.8.2</span> 石材</h4>
+<div id="outline-container-org0036a6a" class="outline-4">
+<h4 id="org0036a6a"><span class="section-number-4">2.8.2</span> 石材</h4>
 <div class="outline-text-4" id="text-2-8-2">
 <ul class="org-ul">
 <li>花岗岩：硬度高，地质密，耐磨，耐压，不易风化，价格高昂；</li>
@@ -1188,8 +1188,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org95e70af" class="outline-4">
-<h4 id="org95e70af"><span class="section-number-4">2.8.3</span> 瓷砖</h4>
+<div id="outline-container-orgdeaca0f" class="outline-4">
+<h4 id="orgdeaca0f"><span class="section-number-4">2.8.3</span> 瓷砖</h4>
 <div class="outline-text-4" id="text-2-8-3">
 <p>
 分墙面砖，地面砖；
@@ -1201,8 +1201,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org60e038d" class="outline-4">
-<h4 id="org60e038d"><span class="section-number-4">2.8.4</span> 地毯</h4>
+<div id="outline-container-orgd6395cc" class="outline-4">
+<h4 id="orgd6395cc"><span class="section-number-4">2.8.4</span> 地毯</h4>
 <div class="outline-text-4" id="text-2-8-4">
 <ul class="org-ul">
 <li>羊毛地毯：保暖，柔软，不易受潮变形，耐用，清洁保养困难；</li>
@@ -1212,8 +1212,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org47a4013" class="outline-4">
-<h4 id="org47a4013"><span class="section-number-4">2.8.5</span> 涂料</h4>
+<div id="outline-container-orgaf33644" class="outline-4">
+<h4 id="orgaf33644"><span class="section-number-4">2.8.5</span> 涂料</h4>
 <div class="outline-text-4" id="text-2-8-5">
 <ul class="org-ul">
 <li>水泥漆：采用水溶性亚克力合成树脂为成分，可耐酸耐水洗，又分平光漆，亮光漆；</li>
@@ -1222,8 +1222,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org9673d80" class="outline-4">
-<h4 id="org9673d80"><span class="section-number-4">2.8.6</span> 壁饰类</h4>
+<div id="outline-container-org1e94ec5" class="outline-4">
+<h4 id="org1e94ec5"><span class="section-number-4">2.8.6</span> 壁饰类</h4>
 <div class="outline-text-4" id="text-2-8-6">
 <ul class="org-ul">
 <li>壁纸：通气性好，原料为纸张加涂刷树脂或者压花纹处理；</li>
@@ -1231,8 +1231,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgdf55a18" class="outline-4">
-<h4 id="orgdf55a18"><span class="section-number-4">2.8.7</span> 玻璃类</h4>
+<div id="outline-container-org70502d4" class="outline-4">
+<h4 id="org70502d4"><span class="section-number-4">2.8.7</span> 玻璃类</h4>
 <div class="outline-text-4" id="text-2-8-7">
 <ul class="org-ul">
 <li>清玻璃：透视性100%；</li>
@@ -1242,8 +1242,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org832f160" class="outline-4">
-<h4 id="org832f160"><span class="section-number-4">2.8.8</span> 料理台</h4>
+<div id="outline-container-org3e763e9" class="outline-4">
+<h4 id="org3e763e9"><span class="section-number-4">2.8.8</span> 料理台</h4>
 <div class="outline-text-4" id="text-2-8-8">
 <ul class="org-ul">
 <li>耐火板：不易刮伤，但不耐湿，易翻翘，实用性不佳</li>
@@ -1254,16 +1254,16 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org8c6c2aa" class="outline-4">
-<h4 id="org8c6c2aa"><span class="section-number-4">2.8.9</span> 水槽</h4>
+<div id="outline-container-orgd23dbc3" class="outline-4">
+<h4 id="orgd23dbc3"><span class="section-number-4">2.8.9</span> 水槽</h4>
 </div>
 </div>
-<div id="outline-container-org6bf393f" class="outline-3">
-<h3 id="org6bf393f"><span class="section-number-3">2.9</span> 监工表单</h3>
+<div id="outline-container-orgf3d5688" class="outline-3">
+<h3 id="orgf3d5688"><span class="section-number-3">2.9</span> 监工表单</h3>
 <div class="outline-text-3" id="text-2-9">
 </div>
-<div id="outline-container-orgfd70a3e" class="outline-4">
-<h4 id="orgfd70a3e"><span class="section-number-4">2.9.1</span> 石材监工检查表单</h4>
+<div id="outline-container-org4af6839" class="outline-4">
+<h4 id="org4af6839"><span class="section-number-4">2.9.1</span> 石材监工检查表单</h4>
 <div class="outline-text-4" id="text-2-9-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -1325,8 +1325,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-orgca4acc7" class="outline-3">
-<h3 id="orgca4acc7"><span class="section-number-3">2.10</span> 插座开关灯</h3>
+<div id="outline-container-org581460c" class="outline-3">
+<h3 id="org581460c"><span class="section-number-3">2.10</span> 插座开关灯</h3>
 <div class="outline-text-3" id="text-2-10">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -1380,12 +1380,12 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org3f25136" class="outline-3">
-<h3 id="org3f25136"><span class="section-number-3">2.11</span> 家具</h3>
+<div id="outline-container-orgfe0b700" class="outline-3">
+<h3 id="orgfe0b700"><span class="section-number-3">2.11</span> 家具</h3>
 <div class="outline-text-3" id="text-2-11">
 </div>
-<div id="outline-container-org6b0776e" class="outline-4">
-<h4 id="org6b0776e"><span class="section-number-4">2.11.1</span> 桌子</h4>
+<div id="outline-container-org0b5ff0d" class="outline-4">
+<h4 id="org0b5ff0d"><span class="section-number-4">2.11.1</span> 桌子</h4>
 <div class="outline-text-4" id="text-2-11-1">
 <ul class="org-ul">
 <li>餐桌：可以买伸缩餐桌；</li>
@@ -1393,8 +1393,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org23d9b65" class="outline-4">
-<h4 id="org23d9b65"><span class="section-number-4">2.11.2</span> 床</h4>
+<div id="outline-container-org5b0bb9a" class="outline-4">
+<h4 id="org5b0bb9a"><span class="section-number-4">2.11.2</span> 床</h4>
 <div class="outline-text-4" id="text-2-11-2">
 <ul class="org-ul">
 <li>床：1.8米的床，其实是1.9米的，1.5米的其实是1.6米的，关系到插座开关位置；</li>
@@ -1408,7 +1408,7 @@ for the JavaScript code in this tag.
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-04-21 周日 00:24</p>
+<p class="date">Created: 2020-03-24 周二 10:28</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
