--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-05-07 周二 22:37 -->
+<!-- 2020-03-24 周二 10:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>比克曼的知识管理</title>
@@ -238,122 +238,123 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org0b0acca">1. 数学</a></li>
-<li><a href="#org813a595">2. 算法</a></li>
-<li><a href="#orgdf3397b">3. 协议</a></li>
-<li><a href="#orgcf0df2a">4. 软件</a></li>
-<li><a href="#orgff7b207">5. 硬件</a></li>
-<li><a href="#org6d269d8">6. 工具</a></li>
-<li><a href="#org46e21e0">7. 信号系统</a></li>
-<li><a href="#org459541b">8. 操作系统</a></li>
-<li><a href="#org01fa155">9. 通信</a></li>
-<li><a href="#org08f7e15">10. 百科知识</a></li>
-<li><a href="#org5760eeb">11. 外语</a></li>
-<li><a href="#org2f86c71">12. 装修</a></li>
-<li><a href="#org22335df">13. 附录</a></li>
+<li><a href="#org12485e9">1. 数学</a></li>
+<li><a href="#org07ae8f8">2. 算法</a></li>
+<li><a href="#org6713f4f">3. 协议</a></li>
+<li><a href="#orgcdfe42e">4. 软件</a></li>
+<li><a href="#orge41e1f7">5. 硬件</a></li>
+<li><a href="#org975bfb1">6. 工具</a></li>
+<li><a href="#org77c9aea">7. 信号系统</a></li>
+<li><a href="#org21db634">8. 操作系统</a></li>
+<li><a href="#org453f65a">9. 通信</a></li>
+<li><a href="#orgac6012d">10. 附录</a>
+<ul>
+<li><a href="#org711c3c2">10.1. 帮助</a>
+<ul>
+<li><a href="#orgc829a56">10.1.1. blog生成</a></li>
+</ul>
+</li>
+<li><a href="#org06daeee">10.2. 公钥指纹</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org0b0acca" class="outline-2">
-<h2 id="org0b0acca"><span class="section-number-2">1</span> <a href="./math.html">数学</a></h2>
+<div id="outline-container-org12485e9" class="outline-2">
+<h2 id="org12485e9"><span class="section-number-2">1</span> <a href="./math.html">数学</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 汇总工作中需要用到数学知识。
 </p>
 </div>
 </div>
-<div id="outline-container-org813a595" class="outline-2">
-<h2 id="org813a595"><span class="section-number-2">2</span> <a href="./algorithm.html">算法</a></h2>
+<div id="outline-container-org07ae8f8" class="outline-2">
+<h2 id="org07ae8f8"><span class="section-number-2">2</span> <a href="./algorithm.html">算法</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 总结各种机器学习,数据挖掘等的理念、工具、算法等, 以及数字图像处理知识。
 </p>
 </div>
 </div>
-<div id="outline-container-orgdf3397b" class="outline-2">
-<h2 id="orgdf3397b"><span class="section-number-2">3</span> <a href="./protocol.html">协议</a></h2>
+<div id="outline-container-org6713f4f" class="outline-2">
+<h2 id="org6713f4f"><span class="section-number-2">3</span> <a href="./protocol.html">协议</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 总结工作中遇到的各种协议，包括大族协议，小族协议等。
 </p>
 </div>
 </div>
-<div id="outline-container-orgcf0df2a" class="outline-2">
-<h2 id="orgcf0df2a"><span class="section-number-2">4</span> <a href="./software.html">软件</a></h2>
+<div id="outline-container-orgcdfe42e" class="outline-2">
+<h2 id="orgcdfe42e"><span class="section-number-2">4</span> <a href="./software.html">软件</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 总结软件开发的一些理论，技巧，编程语言等。
 </p>
 </div>
 </div>
-<div id="outline-container-orgff7b207" class="outline-2">
-<h2 id="orgff7b207"><span class="section-number-2">5</span> <a href="./hardware.html">硬件</a></h2>
+<div id="outline-container-orge41e1f7" class="outline-2">
+<h2 id="orge41e1f7"><span class="section-number-2">5</span> <a href="./hardware.html">硬件</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 总结硬件中的数字电路、模拟电路、射频、器件、芯片内核等。
 </p>
 </div>
 </div>
-<div id="outline-container-org6d269d8" class="outline-2">
-<h2 id="org6d269d8"><span class="section-number-2">6</span> <a href="./tool.html">工具</a></h2>
+<div id="outline-container-org975bfb1" class="outline-2">
+<h2 id="org975bfb1"><span class="section-number-2">6</span> <a href="./tool.html">工具</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 总结工作中用到的工具，emacs、latex、软件工具等。
 </p>
 </div>
 </div>
-<div id="outline-container-org46e21e0" class="outline-2">
-<h2 id="org46e21e0"><span class="section-number-2">7</span> <a href="./signal.html">信号系统</a></h2>
+<div id="outline-container-org77c9aea" class="outline-2">
+<h2 id="org77c9aea"><span class="section-number-2">7</span> <a href="./signal.html">信号系统</a></h2>
 <div class="outline-text-2" id="text-7">
 <p>
 总结信号与系统的方方面面。
 </p>
 </div>
 </div>
-<div id="outline-container-org459541b" class="outline-2">
-<h2 id="org459541b"><span class="section-number-2">8</span> <a href="./os.html">操作系统</a></h2>
+<div id="outline-container-org21db634" class="outline-2">
+<h2 id="org21db634"><span class="section-number-2">8</span> <a href="./os.html">操作系统</a></h2>
 <div class="outline-text-2" id="text-8">
 <p>
 总结工作中用到的操作系统，Android、Linux、嵌入式操作系统等。
 </p>
 </div>
 </div>
-<div id="outline-container-org01fa155" class="outline-2">
-<h2 id="org01fa155"><span class="section-number-2">9</span> <a href="./communication.html">通信</a></h2>
+<div id="outline-container-org453f65a" class="outline-2">
+<h2 id="org453f65a"><span class="section-number-2">9</span> <a href="./communication.html">通信</a></h2>
 <div class="outline-text-2" id="text-9">
 <p>
 总结通信系统的方方面面，从基础到LTE。
 </p>
 </div>
 </div>
-<div id="outline-container-org08f7e15" class="outline-2">
-<h2 id="org08f7e15"><span class="section-number-2">10</span> <a href="./encyclopedia.html">百科知识</a></h2>
+<div id="outline-container-orgac6012d" class="outline-2">
+<h2 id="orgac6012d"><span class="section-number-2">10</span> 附录</h2>
 <div class="outline-text-2" id="text-10">
-<p>
-总结工作中接触到的百科知识比如GPS等。
-</p>
+</div>
+<div id="outline-container-org711c3c2" class="outline-3">
+<h3 id="org711c3c2"><span class="section-number-3">10.1</span> 帮助</h3>
+<div class="outline-text-3" id="text-10-1">
+</div>
+<div id="outline-container-orgc829a56" class="outline-4">
+<h4 id="orgc829a56"><span class="section-number-4">10.1.1</span> blog生成</h4>
+<div class="outline-text-4" id="text-10-1-1">
+<ul class="org-ul">
+<li>修改<a href="file:///c:/soft/emacs/.emacs.d/org-mode/bitman-org-blog.el">file:///c:/soft/emacs/.emacs.d/org-mode/bitman-org-blog.el</a>中的
+org-publish-project-alist变中的blog路径，并使之生效；</li>
+<li>执行“C-c C-e P(Publish) p(Current project)”;</li>
+</ul>
 </div>
 </div>
-<div id="outline-container-org5760eeb" class="outline-2">
-<h2 id="org5760eeb"><span class="section-number-2">11</span> <a href="./language.html">外语</a></h2>
-<div class="outline-text-2" id="text-11">
-<p>
-总结平时用到的英语知识、短语、翻译技巧等。 
-</p>
 </div>
-</div>
-<div id="outline-container-org2f86c71" class="outline-2">
-<h2 id="org2f86c71"><span class="section-number-2">12</span> <a href="./decoration.html">装修</a></h2>
-<div class="outline-text-2" id="text-12">
-<p>
-介绍一些装修常识和问题点。
-</p>
-</div>
-</div>
-<div id="outline-container-org22335df" class="outline-2">
-<h2 id="org22335df"><span class="section-number-2">13</span> 附录</h2>
-<div class="outline-text-2" id="text-13">
+<div id="outline-container-org06daeee" class="outline-3">
+<h3 id="org06daeee"><span class="section-number-3">10.2</span> 公钥指纹</h3>
+<div class="outline-text-3" id="text-10-2">
 <p>
 我的公钥指纹：
 </p>
@@ -371,10 +372,11 @@ gpg --keyserver hkps://hkps.pool.sks-keyservers.net --search-keys bitman@163.com
 </div>
 </div>
 </div>
+</div>
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-05-07 周二 22:37</p>
+<p class="date">Created: 2020-03-24 周二 10:45</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
