--- a/software.html
+++ b/software.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-04-21 周日 00:26 -->
+<!-- 2020-03-24 周二 10:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>软件</title>
@@ -257,23 +257,23 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1d551ea">1. 编程语言</a>
+<li><a href="#org4c1c2b4">1. 编程语言</a>
 <ul>
-<li><a href="#org237c348">1.1. C语言</a>
+<li><a href="#orgb1103eb">1.1. C语言</a>
 <ul>
-<li><a href="#org89a06dc">1.1.1. 宏操作</a></li>
-<li><a href="#orgf89ff60">1.1.2. 位操作</a></li>
-<li><a href="#org592c296">1.1.3. 嵌入式</a></li>
+<li><a href="#orgfed3026">1.1.1. 宏操作</a></li>
+<li><a href="#orgfbc9e6b">1.1.2. 位操作</a></li>
+<li><a href="#orga90f685">1.1.3. 嵌入式</a></li>
 </ul>
 </li>
-<li><a href="#orge09fe0b">1.2. JAVA语言</a></li>
-<li><a href="#org8ffe532">1.3. PYTHON语言</a>
+<li><a href="#org1ef7bce">1.2. JAVA语言</a></li>
+<li><a href="#org3d8d790">1.3. PYTHON语言</a>
 <ul>
-<li><a href="#orgdf7dcc4">1.3.1. base</a></li>
-<li><a href="#org325bf78">1.3.2. numpy</a></li>
-<li><a href="#org3cd2e9b">1.3.3. matplotlib</a>
+<li><a href="#org15d3f2e">1.3.1. base</a></li>
+<li><a href="#org7988c0b">1.3.2. numpy</a></li>
+<li><a href="#org16fdc4a">1.3.3. matplotlib</a>
 <ul>
-<li><a href="#orgf97c963">1.3.3.1. 画XY轴离散点图</a></li>
+<li><a href="#org07b221b">1.3.3.1. 画XY轴离散点图</a></li>
 </ul>
 </li>
 </ul>
@@ -284,16 +284,16 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org1d551ea" class="outline-2">
-<h2 id="org1d551ea"><span class="section-number-2">1</span> 编程语言</h2>
+<div id="outline-container-org4c1c2b4" class="outline-2">
+<h2 id="org4c1c2b4"><span class="section-number-2">1</span> 编程语言</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org237c348" class="outline-3">
-<h3 id="org237c348"><span class="section-number-3">1.1</span> C语言</h3>
+<div id="outline-container-orgb1103eb" class="outline-3">
+<h3 id="orgb1103eb"><span class="section-number-3">1.1</span> C语言</h3>
 <div class="outline-text-3" id="text-1-1">
 </div>
-<div id="outline-container-org89a06dc" class="outline-4">
-<h4 id="org89a06dc"><span class="section-number-4">1.1.1</span> 宏操作</h4>
+<div id="outline-container-orgfed3026" class="outline-4">
+<h4 id="orgfed3026"><span class="section-number-4">1.1.1</span> 宏操作</h4>
 <div class="outline-text-4" id="text-1-1-1">
 <ul class="org-ul">
 <li><p>
@@ -382,8 +382,8 @@ error C2015: too many characters in constant; 最后看看#x,估计你也明
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf89ff60" class="outline-4">
-<h4 id="orgf89ff60"><span class="section-number-4">1.1.2</span> 位操作</h4>
+<div id="outline-container-orgfbc9e6b" class="outline-4">
+<h4 id="orgfbc9e6b"><span class="section-number-4">1.1.2</span> 位操作</h4>
 <div class="outline-text-4" id="text-1-1-2">
 <ul class="org-ul">
 <li><p>
@@ -503,8 +503,8 @@ GRAY码到二进制码
 </ul>
 </div>
 </div>
-<div id="outline-container-org592c296" class="outline-4">
-<h4 id="org592c296"><span class="section-number-4">1.1.3</span> 嵌入式</h4>
+<div id="outline-container-orga90f685" class="outline-4">
+<h4 id="orga90f685"><span class="section-number-4">1.1.3</span> 嵌入式</h4>
 <div class="outline-text-4" id="text-1-1-3">
 <ul class="org-ul">
 <li><p>
@@ -531,15 +531,15 @@ printf调试：可以如下步骤
 </div>
 </div>
 </div>
-<div id="outline-container-orge09fe0b" class="outline-3">
-<h3 id="orge09fe0b"><span class="section-number-3">1.2</span> JAVA语言</h3>
+<div id="outline-container-org1ef7bce" class="outline-3">
+<h3 id="org1ef7bce"><span class="section-number-3">1.2</span> JAVA语言</h3>
 </div>
-<div id="outline-container-org8ffe532" class="outline-3">
-<h3 id="org8ffe532"><span class="section-number-3">1.3</span> PYTHON语言</h3>
+<div id="outline-container-org3d8d790" class="outline-3">
+<h3 id="org3d8d790"><span class="section-number-3">1.3</span> PYTHON语言</h3>
 <div class="outline-text-3" id="text-1-3">
 </div>
-<div id="outline-container-orgdf7dcc4" class="outline-4">
-<h4 id="orgdf7dcc4"><span class="section-number-4">1.3.1</span> base</h4>
+<div id="outline-container-org15d3f2e" class="outline-4">
+<h4 id="org15d3f2e"><span class="section-number-4">1.3.1</span> base</h4>
 <div class="outline-text-4" id="text-1-3-1">
 <ul class="org-ul">
 <li><p>
@@ -574,8 +574,8 @@ printf调试：可以如下步骤
 </ul>
 </div>
 </div>
-<div id="outline-container-org325bf78" class="outline-4">
-<h4 id="org325bf78"><span class="section-number-4">1.3.2</span> numpy</h4>
+<div id="outline-container-org7988c0b" class="outline-4">
+<h4 id="org7988c0b"><span class="section-number-4">1.3.2</span> numpy</h4>
 <div class="outline-text-4" id="text-1-3-2">
 <ul class="org-ul">
 <li>array矩阵的max和min静态属性：比如array矩阵data=array([[1, 5, 3],
@@ -591,15 +591,15 @@ numpy.angle()计算</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org3cd2e9b" class="outline-4">
-<h4 id="org3cd2e9b"><span class="section-number-4">1.3.3</span> matplotlib</h4>
+<div id="outline-container-org16fdc4a" class="outline-4">
+<h4 id="org16fdc4a"><span class="section-number-4">1.3.3</span> matplotlib</h4>
 <div class="outline-text-4" id="text-1-3-3">
 <p>
 此包注意用于画图
 </p>
 </div>
-<div id="outline-container-orgf97c963" class="outline-5">
-<h5 id="orgf97c963"><span class="section-number-5">1.3.3.1</span> 画XY轴离散点图</h5>
+<div id="outline-container-org07b221b" class="outline-5">
+<h5 id="org07b221b"><span class="section-number-5">1.3.3.1</span> 画XY轴离散点图</h5>
 <div class="outline-text-5" id="text-1-3-3-1">
 <ol class="org-ol">
 <li>先获得x,y的取值范围，比如x=numpy.arange(0, 10), y=numpy.arange(3,
@@ -620,7 +620,7 @@ numpy.angle()计算</li>
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-04-21 周日 00:26</p>
+<p class="date">Created: 2020-03-24 周二 10:29</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
