增加安全板块

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-03-24 周二 10:45 -->
+<!-- 2020-03-24 周二 10:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>比克曼的知识管理</title>
@@ -247,14 +247,15 @@ for the JavaScript code in this tag.
 <li><a href="#org77c9aea">7. 信号系统</a></li>
 <li><a href="#org21db634">8. 操作系统</a></li>
 <li><a href="#org453f65a">9. 通信</a></li>
-<li><a href="#orgac6012d">10. 附录</a>
+<li><a href="#orgd9a12f0">10. 安全</a></li>
+<li><a href="#orgac6012d">11. 附录</a>
 <ul>
-<li><a href="#org711c3c2">10.1. 帮助</a>
+<li><a href="#org711c3c2">11.1. 帮助</a>
 <ul>
-<li><a href="#orgc829a56">10.1.1. blog生成</a></li>
+<li><a href="#orgc829a56">11.1.1. blog生成</a></li>
 </ul>
 </li>
-<li><a href="#org06daeee">10.2. 公钥指纹</a></li>
+<li><a href="#org06daeee">11.2. 公钥指纹</a></li>
 </ul>
 </li>
 </ul>
@@ -333,17 +334,25 @@ for the JavaScript code in this tag.
 </p>
 </div>
 </div>
-<div id="outline-container-orgac6012d" class="outline-2">
-<h2 id="orgac6012d"><span class="section-number-2">10</span> 附录</h2>
+<div id="outline-container-orgd9a12f0" class="outline-2">
+<h2 id="orgd9a12f0"><span class="section-number-2">10</span> <a href="./security.html">安全</a></h2>
 <div class="outline-text-2" id="text-10">
+<p>
+总结安全行业相关概念和心得。
+</p>
+</div>
+</div>
+<div id="outline-container-orgac6012d" class="outline-2">
+<h2 id="orgac6012d"><span class="section-number-2">11</span> 附录</h2>
+<div class="outline-text-2" id="text-11">
 </div>
 <div id="outline-container-org711c3c2" class="outline-3">
-<h3 id="org711c3c2"><span class="section-number-3">10.1</span> 帮助</h3>
-<div class="outline-text-3" id="text-10-1">
+<h3 id="org711c3c2"><span class="section-number-3">11.1</span> 帮助</h3>
+<div class="outline-text-3" id="text-11-1">
 </div>
 <div id="outline-container-orgc829a56" class="outline-4">
-<h4 id="orgc829a56"><span class="section-number-4">10.1.1</span> blog生成</h4>
-<div class="outline-text-4" id="text-10-1-1">
+<h4 id="orgc829a56"><span class="section-number-4">11.1.1</span> blog生成</h4>
+<div class="outline-text-4" id="text-11-1-1">
 <ul class="org-ul">
 <li>修改<a href="file:///c:/soft/emacs/.emacs.d/org-mode/bitman-org-blog.el">file:///c:/soft/emacs/.emacs.d/org-mode/bitman-org-blog.el</a>中的
 org-publish-project-alist变中的blog路径，并使之生效；</li>
@@ -353,8 +362,8 @@ org-publish-project-alist变中的blog路径，并使之生效；</li>
 </div>
 </div>
 <div id="outline-container-org06daeee" class="outline-3">
-<h3 id="org06daeee"><span class="section-number-3">10.2</span> 公钥指纹</h3>
-<div class="outline-text-3" id="text-10-2">
+<h3 id="org06daeee"><span class="section-number-3">11.2</span> 公钥指纹</h3>
+<div class="outline-text-3" id="text-11-2">
 <p>
 我的公钥指纹：
 </p>
@@ -376,7 +385,7 @@ gpg --keyserver hkps://hkps.pool.sks-keyservers.net --search-keys bitman@163.com
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2020-03-24 周二 10:45</p>
+<p class="date">Created: 2020-03-24 周二 10:55</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
