--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-03-31 周二 20:35 -->
+<!-- 2020-04-07 周二 22:02 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>比克曼的知识管理</title>
@@ -238,120 +238,120 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org12485e9">1. 数学</a></li>
-<li><a href="#org07ae8f8">2. 算法</a></li>
-<li><a href="#org6713f4f">3. 协议</a></li>
-<li><a href="#orgcdfe42e">4. 软件</a></li>
-<li><a href="#orge41e1f7">5. 硬件</a></li>
-<li><a href="#org975bfb1">6. 工具</a></li>
-<li><a href="#org77c9aea">7. 信号系统</a></li>
-<li><a href="#org21db634">8. 操作系统</a></li>
-<li><a href="#org453f65a">9. 通信</a></li>
-<li><a href="#orgd9a12f0">10. 安全</a></li>
-<li><a href="#orgac6012d">11. 附录</a>
+<li><a href="#org8214936">1. 数学</a></li>
+<li><a href="#orgc01d433">2. 算法</a></li>
+<li><a href="#org7523b4c">3. 协议</a></li>
+<li><a href="#orgea568f2">4. 软件</a></li>
+<li><a href="#org3dfee8b">5. 硬件</a></li>
+<li><a href="#org02126c9">6. 工具</a></li>
+<li><a href="#org6d50085">7. 信号系统</a></li>
+<li><a href="#org5269c0a">8. 操作系统</a></li>
+<li><a href="#org4c0db4a">9. 通信</a></li>
+<li><a href="#org05f7b03">10. 安全</a></li>
+<li><a href="#org4391e46">11. 附录</a>
 <ul>
-<li><a href="#org711c3c2">11.1. 帮助</a>
+<li><a href="#orgbf5e77e">11.1. 帮助</a>
 <ul>
-<li><a href="#orgc829a56">11.1.1. blog生成</a></li>
+<li><a href="#orgcb4be9a">11.1.1. blog生成</a></li>
 </ul>
 </li>
-<li><a href="#org06daeee">11.2. 公钥指纹</a></li>
+<li><a href="#orgccfe190">11.2. 公钥指纹</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org12485e9" class="outline-2">
-<h2 id="org12485e9"><span class="section-number-2">1</span> <a href="./math.html">数学</a></h2>
+<div id="outline-container-org8214936" class="outline-2">
+<h2 id="org8214936"><span class="section-number-2">1</span> <a href="./math.html">数学</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 汇总工作中需要用到数学知识。
 </p>
 </div>
 </div>
-<div id="outline-container-org07ae8f8" class="outline-2">
-<h2 id="org07ae8f8"><span class="section-number-2">2</span> <a href="./algorithm.html">算法</a></h2>
+<div id="outline-container-orgc01d433" class="outline-2">
+<h2 id="orgc01d433"><span class="section-number-2">2</span> <a href="./algorithm.html">算法</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 总结各种机器学习,数据挖掘等的理念、工具、算法等, 以及数字图像处理知识。
 </p>
 </div>
 </div>
-<div id="outline-container-org6713f4f" class="outline-2">
-<h2 id="org6713f4f"><span class="section-number-2">3</span> <a href="./protocol.html">协议</a></h2>
+<div id="outline-container-org7523b4c" class="outline-2">
+<h2 id="org7523b4c"><span class="section-number-2">3</span> <a href="./protocol.html">协议</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 总结工作中遇到的各种协议，包括大族协议，小族协议等。
 </p>
 </div>
 </div>
-<div id="outline-container-orgcdfe42e" class="outline-2">
-<h2 id="orgcdfe42e"><span class="section-number-2">4</span> <a href="./software.html">软件</a></h2>
+<div id="outline-container-orgea568f2" class="outline-2">
+<h2 id="orgea568f2"><span class="section-number-2">4</span> <a href="./software.html">软件</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 总结软件开发的一些理论，技巧，编程语言等。
 </p>
 </div>
 </div>
-<div id="outline-container-orge41e1f7" class="outline-2">
-<h2 id="orge41e1f7"><span class="section-number-2">5</span> <a href="./hardware.html">硬件</a></h2>
+<div id="outline-container-org3dfee8b" class="outline-2">
+<h2 id="org3dfee8b"><span class="section-number-2">5</span> <a href="./hardware.html">硬件</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 总结硬件中的数字电路、模拟电路、射频、器件、芯片内核等。
 </p>
 </div>
 </div>
-<div id="outline-container-org975bfb1" class="outline-2">
-<h2 id="org975bfb1"><span class="section-number-2">6</span> <a href="./tool.html">工具</a></h2>
+<div id="outline-container-org02126c9" class="outline-2">
+<h2 id="org02126c9"><span class="section-number-2">6</span> <a href="./tool.html">工具</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
-总结工作中用到的工具，emacs、latex、软件工具等。
+总结工作中用到的工具，emacs、latex、git、软件工具等。
 </p>
 </div>
 </div>
-<div id="outline-container-org77c9aea" class="outline-2">
-<h2 id="org77c9aea"><span class="section-number-2">7</span> <a href="./signal.html">信号系统</a></h2>
+<div id="outline-container-org6d50085" class="outline-2">
+<h2 id="org6d50085"><span class="section-number-2">7</span> <a href="./signal.html">信号系统</a></h2>
 <div class="outline-text-2" id="text-7">
 <p>
 总结信号与系统的方方面面。
 </p>
 </div>
 </div>
-<div id="outline-container-org21db634" class="outline-2">
-<h2 id="org21db634"><span class="section-number-2">8</span> <a href="./os.html">操作系统</a></h2>
+<div id="outline-container-org5269c0a" class="outline-2">
+<h2 id="org5269c0a"><span class="section-number-2">8</span> <a href="./os.html">操作系统</a></h2>
 <div class="outline-text-2" id="text-8">
 <p>
 总结工作中用到的操作系统，Android、Linux、嵌入式操作系统等。
 </p>
 </div>
 </div>
-<div id="outline-container-org453f65a" class="outline-2">
-<h2 id="org453f65a"><span class="section-number-2">9</span> <a href="./communication.html">通信</a></h2>
+<div id="outline-container-org4c0db4a" class="outline-2">
+<h2 id="org4c0db4a"><span class="section-number-2">9</span> <a href="./communication.html">通信</a></h2>
 <div class="outline-text-2" id="text-9">
 <p>
 总结通信系统的方方面面，从基础到LTE。
 </p>
 </div>
 </div>
-<div id="outline-container-orgd9a12f0" class="outline-2">
-<h2 id="orgd9a12f0"><span class="section-number-2">10</span> <a href="./security.html">安全</a></h2>
+<div id="outline-container-org05f7b03" class="outline-2">
+<h2 id="org05f7b03"><span class="section-number-2">10</span> <a href="./security.html">安全</a></h2>
 <div class="outline-text-2" id="text-10">
 <p>
 总结安全行业相关概念和心得。
 </p>
 </div>
 </div>
-<div id="outline-container-orgac6012d" class="outline-2">
-<h2 id="orgac6012d"><span class="section-number-2">11</span> 附录</h2>
+<div id="outline-container-org4391e46" class="outline-2">
+<h2 id="org4391e46"><span class="section-number-2">11</span> 附录</h2>
 <div class="outline-text-2" id="text-11">
 </div>
-<div id="outline-container-org711c3c2" class="outline-3">
-<h3 id="org711c3c2"><span class="section-number-3">11.1</span> 帮助</h3>
+<div id="outline-container-orgbf5e77e" class="outline-3">
+<h3 id="orgbf5e77e"><span class="section-number-3">11.1</span> 帮助</h3>
 <div class="outline-text-3" id="text-11-1">
 </div>
-<div id="outline-container-orgc829a56" class="outline-4">
-<h4 id="orgc829a56"><span class="section-number-4">11.1.1</span> blog生成</h4>
+<div id="outline-container-orgcb4be9a" class="outline-4">
+<h4 id="orgcb4be9a"><span class="section-number-4">11.1.1</span> blog生成</h4>
 <div class="outline-text-4" id="text-11-1-1">
 <ul class="org-ul">
 <li>修改<a href="file:///c:/soft/emacs/.emacs.d/org-mode/bitman-org-blog.el">file:///c:/soft/emacs/.emacs.d/org-mode/bitman-org-blog.el</a>中的
@@ -361,8 +361,8 @@ org-publish-project-alist变中的blog路径，并使之生效；</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org06daeee" class="outline-3">
-<h3 id="org06daeee"><span class="section-number-3">11.2</span> 公钥指纹</h3>
+<div id="outline-container-orgccfe190" class="outline-3">
+<h3 id="orgccfe190"><span class="section-number-3">11.2</span> 公钥指纹</h3>
 <div class="outline-text-3" id="text-11-2">
 <p>
 我的公钥指纹：
@@ -385,7 +385,7 @@ gpg --keyserver hkps://hkps.pool.sks-keyservers.net --search-keys bitman@163.com
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2020-03-31 周二 20:35</p>
+<p class="date">Created: 2020-04-07 周二 22:02</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
