--- a/communication.html
+++ b/communication.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-03-24 周二 10:28 -->
+<!-- 2020-05-28 周四 21:32 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>通信</title>
@@ -235,21 +235,21 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org3805ec7">1. 概念</a></li>
-<li><a href="#orge5cf5ce">2. 通信原理</a>
+<li><a href="#org61ca57c">1. 概念</a></li>
+<li><a href="#org53495d8">2. 通信原理</a>
 <ul>
-<li><a href="#orgb30003f">2.1. 模拟信号数字化</a></li>
-<li><a href="#orgf6c0610">2.2. 数字基带信号</a></li>
+<li><a href="#org82ee39f">2.1. 模拟信号数字化</a></li>
+<li><a href="#orgcb0b597">2.2. 数字基带信号</a></li>
 </ul>
 </li>
-<li><a href="#orgf601e39">3. LTE</a></li>
+<li><a href="#orga1cfd03">3. LTE</a></li>
 </ul>
 </div>
 </div>
 
 
-<div id="outline-container-org3805ec7" class="outline-2">
-<h2 id="org3805ec7"><span class="section-number-2">1</span> 概念</h2>
+<div id="outline-container-org61ca57c" class="outline-2">
+<h2 id="org61ca57c"><span class="section-number-2">1</span> 概念</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>信源编解码：信源编码和解码时两个逆过程，信源编码有2个作用
@@ -268,12 +268,12 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orge5cf5ce" class="outline-2">
-<h2 id="orge5cf5ce"><span class="section-number-2">2</span> 通信原理</h2>
+<div id="outline-container-org53495d8" class="outline-2">
+<h2 id="org53495d8"><span class="section-number-2">2</span> 通信原理</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orgb30003f" class="outline-3">
-<h3 id="orgb30003f"><span class="section-number-3">2.1</span> 模拟信号数字化</h3>
+<div id="outline-container-org82ee39f" class="outline-3">
+<h3 id="org82ee39f"><span class="section-number-3">2.1</span> 模拟信号数字化</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 模拟信号数字化，采用抽样定理，抽样出信号，在通过编码（比如格雷码）将抽样的
@@ -298,8 +298,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf6c0610" class="outline-3">
-<h3 id="orgf6c0610"><span class="section-number-3">2.2</span> 数字基带信号</h3>
+<div id="outline-container-orgcb0b597" class="outline-3">
+<h3 id="orgcb0b597"><span class="section-number-3">2.2</span> 数字基带信号</h3>
 <div class="outline-text-3" id="text-2-2">
 <p>
 数字基带信号的特点是功率谱集中在零频率附近。数字基带信号通常是在电缆线路中
@@ -324,14 +324,14 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-orgf601e39" class="outline-2">
-<h2 id="orgf601e39"><span class="section-number-2">3</span> LTE</h2>
+<div id="outline-container-orga1cfd03" class="outline-2">
+<h2 id="orga1cfd03"><span class="section-number-2">3</span> LTE</h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2020-03-24 周二 10:28</p>
+<p class="date">Created: 2020-05-28 周四 21:32</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
