--- a/software.html
+++ b/software.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-04-23 周四 18:51 -->
+<!-- 2020-05-28 周四 21:33 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>软件</title>
@@ -257,57 +257,57 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org819eed2">1. 编程语言</a>
+<li><a href="#orgf848f1c">1. 编程语言</a>
 <ul>
-<li><a href="#orgf28a1f3">1.1. C语言</a>
+<li><a href="#org5fbfd01">1.1. C语言</a>
 <ul>
-<li><a href="#orgbe33029">1.1.1. 宏操作</a></li>
-<li><a href="#org9625bc2">1.1.2. 位操作</a></li>
-<li><a href="#org5dfebc3">1.1.3. 字符串操作</a></li>
-<li><a href="#org6ecdc59">1.1.4. 嵌入式</a></li>
+<li><a href="#orgdfd34c4">1.1.1. 宏操作</a></li>
+<li><a href="#org1a5b521">1.1.2. 位操作</a></li>
+<li><a href="#org5b2e5af">1.1.3. 字符串操作</a></li>
+<li><a href="#org0991e8f">1.1.4. 嵌入式</a></li>
 </ul>
 </li>
-<li><a href="#org816569b">1.2. JAVA语言</a></li>
-<li><a href="#orgaea1857">1.3. PYTHON语言</a>
+<li><a href="#orgf9e4fa3">1.2. JAVA语言</a></li>
+<li><a href="#org764326a">1.3. PYTHON语言</a>
 <ul>
-<li><a href="#org15d3f2e">1.3.1. base</a></li>
-<li><a href="#org7988c0b">1.3.2. numpy</a></li>
-<li><a href="#org16fdc4a">1.3.3. matplotlib</a>
+<li><a href="#orgb6789c7">1.3.1. base</a></li>
+<li><a href="#org2cc4099">1.3.2. numpy</a></li>
+<li><a href="#org1a993c6">1.3.3. matplotlib</a>
 <ul>
-<li><a href="#orgabe09b6">1.3.3.1. 画XY轴离散点图</a></li>
+<li><a href="#org010683b">1.3.3.1. 画XY轴离散点图</a></li>
 </ul>
 </li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org3f82306">2. 状态机和信号量</a>
+<li><a href="#org6ba50cf">2. 状态机和信号量</a>
 <ul>
-<li><a href="#org0eba6eb">2.1. 断言</a></li>
-<li><a href="#org7af4693">2.2. 信号量</a>
+<li><a href="#orgf039089">2.1. 断言</a></li>
+<li><a href="#org4eb8579">2.2. 信号量</a>
 <ul>
-<li><a href="#orgadd3b02">2.2.1. 信号值</a></li>
-<li><a href="#org027ba22">2.2.2. 信号名</a></li>
-<li><a href="#orgd46a6c6">2.2.3. 信号ID</a></li>
-<li><a href="#orged52c8f">2.2.4. 信号对象</a></li>
-<li><a href="#orgbfe306b">2.2.5. 信号存储表</a></li>
-<li><a href="#org26ef1a5">2.2.6. 信号内部操作</a></li>
-<li><a href="#org636f00b">2.2.7. 信号操作API</a></li>
+<li><a href="#orgb13655a">2.2.1. 信号值</a></li>
+<li><a href="#org2f2af8a">2.2.2. 信号名</a></li>
+<li><a href="#org8282201">2.2.3. 信号ID</a></li>
+<li><a href="#org19bf11b">2.2.4. 信号对象</a></li>
+<li><a href="#org8e0529d">2.2.5. 信号存储表</a></li>
+<li><a href="#orgcb3c873">2.2.6. 信号内部操作</a></li>
+<li><a href="#orgfbf85bb">2.2.7. 信号操作API</a></li>
 </ul>
 </li>
-<li><a href="#org0084e87">2.3. 状态机</a>
+<li><a href="#org85d19b7">2.3. 状态机</a>
 <ul>
-<li><a href="#org7cf1e9a">2.3.1. 状态机</a></li>
-<li><a href="#orgd44d5d1">2.3.2. 状态名称</a></li>
-<li><a href="#org3f45ec0">2.3.3. 状态处理函数</a></li>
-<li><a href="#orgcd5292c">2.3.4. 状态定义</a></li>
-<li><a href="#org372f279">2.3.5. 状态转换函数</a></li>
+<li><a href="#org82c7f35">2.3.1. 状态机</a></li>
+<li><a href="#org63b1e1f">2.3.2. 状态名称</a></li>
+<li><a href="#orge6b17f3">2.3.3. 状态处理函数</a></li>
+<li><a href="#org4c88243">2.3.4. 状态定义</a></li>
+<li><a href="#org502fe92">2.3.5. 状态转换函数</a></li>
 </ul>
 </li>
-<li><a href="#org49b1ef7">2.4. 应用</a>
+<li><a href="#org2db2697">2.4. 应用</a>
 <ul>
-<li><a href="#org08183ef">2.4.1. 状态机转换</a></li>
-<li><a href="#orgb611ccf">2.4.2. 源码</a></li>
+<li><a href="#orgd78e941">2.4.1. 状态机转换</a></li>
+<li><a href="#org4fcaa48">2.4.2. 源码</a></li>
 </ul>
 </li>
 </ul>
@@ -316,16 +316,16 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org819eed2" class="outline-2">
-<h2 id="org819eed2"><span class="section-number-2">1</span> 编程语言</h2>
+<div id="outline-container-orgf848f1c" class="outline-2">
+<h2 id="orgf848f1c"><span class="section-number-2">1</span> 编程语言</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgf28a1f3" class="outline-3">
-<h3 id="orgf28a1f3"><span class="section-number-3">1.1</span> C语言</h3>
+<div id="outline-container-org5fbfd01" class="outline-3">
+<h3 id="org5fbfd01"><span class="section-number-3">1.1</span> C语言</h3>
 <div class="outline-text-3" id="text-1-1">
 </div>
-<div id="outline-container-orgbe33029" class="outline-4">
-<h4 id="orgbe33029"><span class="section-number-4">1.1.1</span> 宏操作</h4>
+<div id="outline-container-orgdfd34c4" class="outline-4">
+<h4 id="orgdfd34c4"><span class="section-number-4">1.1.1</span> 宏操作</h4>
 <div class="outline-text-4" id="text-1-1-1">
 <ul class="org-ul">
 <li><p>
@@ -414,8 +414,8 @@ error C2015: too many characters in constant; 最后看看#x,估计你也明
 </ul>
 </div>
 </div>
-<div id="outline-container-org9625bc2" class="outline-4">
-<h4 id="org9625bc2"><span class="section-number-4">1.1.2</span> 位操作</h4>
+<div id="outline-container-org1a5b521" class="outline-4">
+<h4 id="org1a5b521"><span class="section-number-4">1.1.2</span> 位操作</h4>
 <div class="outline-text-4" id="text-1-1-2">
 <ul class="org-ul">
 <li><p>
@@ -535,8 +535,8 @@ GRAY码到二进制码
 </ul>
 </div>
 </div>
-<div id="outline-container-org5dfebc3" class="outline-4">
-<h4 id="org5dfebc3"><span class="section-number-4">1.1.3</span> 字符串操作</h4>
+<div id="outline-container-org5b2e5af" class="outline-4">
+<h4 id="org5b2e5af"><span class="section-number-4">1.1.3</span> 字符串操作</h4>
 <div class="outline-text-4" id="text-1-1-3">
 <ul class="org-ul">
 <li><p>
@@ -593,8 +593,8 @@ GRAY码到二进制码
 </div>
 </div>
 
-<div id="outline-container-org6ecdc59" class="outline-4">
-<h4 id="org6ecdc59"><span class="section-number-4">1.1.4</span> 嵌入式</h4>
+<div id="outline-container-org0991e8f" class="outline-4">
+<h4 id="org0991e8f"><span class="section-number-4">1.1.4</span> 嵌入式</h4>
 <div class="outline-text-4" id="text-1-1-4">
 <ul class="org-ul">
 <li><p>
@@ -621,15 +621,15 @@ printf调试：可以如下步骤
 </div>
 </div>
 </div>
-<div id="outline-container-org816569b" class="outline-3">
-<h3 id="org816569b"><span class="section-number-3">1.2</span> JAVA语言</h3>
+<div id="outline-container-orgf9e4fa3" class="outline-3">
+<h3 id="orgf9e4fa3"><span class="section-number-3">1.2</span> JAVA语言</h3>
 </div>
-<div id="outline-container-orgaea1857" class="outline-3">
-<h3 id="orgaea1857"><span class="section-number-3">1.3</span> PYTHON语言</h3>
+<div id="outline-container-org764326a" class="outline-3">
+<h3 id="org764326a"><span class="section-number-3">1.3</span> PYTHON语言</h3>
 <div class="outline-text-3" id="text-1-3">
 </div>
-<div id="outline-container-org15d3f2e" class="outline-4">
-<h4 id="org15d3f2e"><span class="section-number-4">1.3.1</span> base</h4>
+<div id="outline-container-orgb6789c7" class="outline-4">
+<h4 id="orgb6789c7"><span class="section-number-4">1.3.1</span> base</h4>
 <div class="outline-text-4" id="text-1-3-1">
 <ul class="org-ul">
 <li><p>
@@ -664,8 +664,8 @@ printf调试：可以如下步骤
 </ul>
 </div>
 </div>
-<div id="outline-container-org7988c0b" class="outline-4">
-<h4 id="org7988c0b"><span class="section-number-4">1.3.2</span> numpy</h4>
+<div id="outline-container-org2cc4099" class="outline-4">
+<h4 id="org2cc4099"><span class="section-number-4">1.3.2</span> numpy</h4>
 <div class="outline-text-4" id="text-1-3-2">
 <ul class="org-ul">
 <li>array矩阵的max和min静态属性：比如array矩阵data=array([[1, 5, 3],
@@ -681,15 +681,15 @@ numpy.angle()计算</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org16fdc4a" class="outline-4">
-<h4 id="org16fdc4a"><span class="section-number-4">1.3.3</span> matplotlib</h4>
+<div id="outline-container-org1a993c6" class="outline-4">
+<h4 id="org1a993c6"><span class="section-number-4">1.3.3</span> matplotlib</h4>
 <div class="outline-text-4" id="text-1-3-3">
 <p>
 此包注意用于画图
 </p>
 </div>
-<div id="outline-container-orgabe09b6" class="outline-5">
-<h5 id="orgabe09b6"><span class="section-number-5">1.3.3.1</span> 画XY轴离散点图</h5>
+<div id="outline-container-org010683b" class="outline-5">
+<h5 id="org010683b"><span class="section-number-5">1.3.3.1</span> 画XY轴离散点图</h5>
 <div class="outline-text-5" id="text-1-3-3-1">
 <ol class="org-ol">
 <li>先获得x,y的取值范围，比如x=numpy.arange(0, 10), y=numpy.arange(3,
@@ -706,12 +706,12 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org3f82306" class="outline-2">
-<h2 id="org3f82306"><span class="section-number-2">2</span> 状态机和信号量</h2>
+<div id="outline-container-org6ba50cf" class="outline-2">
+<h2 id="org6ba50cf"><span class="section-number-2">2</span> 状态机和信号量</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org0eba6eb" class="outline-3">
-<h3 id="org0eba6eb"><span class="section-number-3">2.1</span> 断言</h3>
+<div id="outline-container-orgf039089" class="outline-3">
+<h3 id="orgf039089"><span class="section-number-3">2.1</span> 断言</h3>
 <div class="outline-text-3" id="text-2-1">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #87cefa; text-decoration: underline;">#ifdef</span> NF_NDEBUG
@@ -725,12 +725,12 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org7af4693" class="outline-3">
-<h3 id="org7af4693"><span class="section-number-3">2.2</span> 信号量</h3>
+<div id="outline-container-org4eb8579" class="outline-3">
+<h3 id="org4eb8579"><span class="section-number-3">2.2</span> 信号量</h3>
 <div class="outline-text-3" id="text-2-2">
 </div>
-<div id="outline-container-orgadd3b02" class="outline-4">
-<h4 id="orgadd3b02"><span class="section-number-4">2.2.1</span> 信号值</h4>
+<div id="outline-container-orgb13655a" class="outline-4">
+<h4 id="orgb13655a"><span class="section-number-4">2.2.1</span> 信号值</h4>
 <div class="outline-text-4" id="text-2-2-1">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #ffb6c1; font-size: 105%;">typedef</span> <span style="color: #ffff00; font-size: 105%;">uint32_t</span> <span style="color: #ffff00; font-size: 105%;">SignalValue_T</span>;
@@ -738,8 +738,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org027ba22" class="outline-4">
-<h4 id="org027ba22"><span class="section-number-4">2.2.2</span> 信号名</h4>
+<div id="outline-container-org2f2af8a" class="outline-4">
+<h4 id="org2f2af8a"><span class="section-number-4">2.2.2</span> 信号名</h4>
 <div class="outline-text-4" id="text-2-2-2">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #ffb6c1; font-size: 105%;">typedef</span> <span style="color: #ffb6c1; font-size: 105%;">const</span> <span style="color: #ffff00; font-size: 105%;">char</span>* <span style="color: #ffff00; font-size: 105%;">SignalName_T</span>;
@@ -747,8 +747,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orgd46a6c6" class="outline-4">
-<h4 id="orgd46a6c6"><span class="section-number-4">2.2.3</span> 信号ID</h4>
+<div id="outline-container-org8282201" class="outline-4">
+<h4 id="org8282201"><span class="section-number-4">2.2.3</span> 信号ID</h4>
 <div class="outline-text-4" id="text-2-2-3">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #ffb6c1; font-size: 105%;">typedef</span> <span style="color: #ffff00; font-size: 105%;">uint32_t</span> <span style="color: #ffff00; font-size: 105%;">SignalID_T</span>;
@@ -756,8 +756,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orged52c8f" class="outline-4">
-<h4 id="orged52c8f"><span class="section-number-4">2.2.4</span> 信号对象</h4>
+<div id="outline-container-org19bf11b" class="outline-4">
+<h4 id="org19bf11b"><span class="section-number-4">2.2.4</span> 信号对象</h4>
 <div class="outline-text-4" id="text-2-2-4">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #ffb6c1; font-size: 105%;">typedef</span> <span style="color: #ffb6c1; font-size: 105%;">struct</span> <span style="color: #ffff00; font-size: 105%;">_sig</span>
@@ -769,8 +769,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orgbfe306b" class="outline-4">
-<h4 id="orgbfe306b"><span class="section-number-4">2.2.5</span> 信号存储表</h4>
+<div id="outline-container-org8e0529d" class="outline-4">
+<h4 id="org8e0529d"><span class="section-number-4">2.2.5</span> 信号存储表</h4>
 <div class="outline-text-4" id="text-2-2-5">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #87cefa; text-decoration: underline;">#define</span> <span style="color: #ffd700;">MAX_SIGNAL_NUM</span>    50  
@@ -780,8 +780,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org26ef1a5" class="outline-4">
-<h4 id="org26ef1a5"><span class="section-number-4">2.2.6</span> 信号内部操作</h4>
+<div id="outline-container-orgcb3c873" class="outline-4">
+<h4 id="orgcb3c873"><span class="section-number-4">2.2.6</span> 信号内部操作</h4>
 <div class="outline-text-4" id="text-2-2-6">
 <ul class="org-ul">
 <li><p>
@@ -846,8 +846,8 @@ numpy.angle()计算</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org636f00b" class="outline-4">
-<h4 id="org636f00b"><span class="section-number-4">2.2.7</span> 信号操作API</h4>
+<div id="outline-container-orgfbf85bb" class="outline-4">
+<h4 id="orgfbf85bb"><span class="section-number-4">2.2.7</span> 信号操作API</h4>
 <div class="outline-text-4" id="text-2-2-7">
 <ul class="org-ul">
 <li><p>
@@ -935,12 +935,12 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org0084e87" class="outline-3">
-<h3 id="org0084e87"><span class="section-number-3">2.3</span> 状态机</h3>
+<div id="outline-container-org85d19b7" class="outline-3">
+<h3 id="org85d19b7"><span class="section-number-3">2.3</span> 状态机</h3>
 <div class="outline-text-3" id="text-2-3">
 </div>
-<div id="outline-container-org7cf1e9a" class="outline-4">
-<h4 id="org7cf1e9a"><span class="section-number-4">2.3.1</span> 状态机</h4>
+<div id="outline-container-org82c7f35" class="outline-4">
+<h4 id="org82c7f35"><span class="section-number-4">2.3.1</span> 状态机</h4>
 <div class="outline-text-4" id="text-2-3-1">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #ffb6c1; font-size: 105%;">typedef</span> <span style="color: #ffb6c1; font-size: 105%;">struct</span> <span style="color: #ffff00; font-size: 105%;">_sta_machine</span>
@@ -953,8 +953,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orgd44d5d1" class="outline-4">
-<h4 id="orgd44d5d1"><span class="section-number-4">2.3.2</span> 状态名称</h4>
+<div id="outline-container-org63b1e1f" class="outline-4">
+<h4 id="org63b1e1f"><span class="section-number-4">2.3.2</span> 状态名称</h4>
 <div class="outline-text-4" id="text-2-3-2">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #ffb6c1; font-size: 105%;">typedef</span> <span style="color: #ffb6c1; font-size: 105%;">const</span> <span style="color: #ffff00; font-size: 105%;">char</span>* <span style="color: #ffff00; font-size: 105%;">FSM_Name_T</span>;
@@ -962,8 +962,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org3f45ec0" class="outline-4">
-<h4 id="org3f45ec0"><span class="section-number-4">2.3.3</span> 状态处理函数</h4>
+<div id="outline-container-orge6b17f3" class="outline-4">
+<h4 id="orge6b17f3"><span class="section-number-4">2.3.3</span> 状态处理函数</h4>
 <div class="outline-text-4" id="text-2-3-3">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #ffb6c1; font-size: 105%;">typedef</span> <span style="color: #ffff00; font-size: 105%;">void</span> (*<span style="color: #ffff00; font-size: 105%;">FSM_Handler_T</span>)(<span style="color: #ffff00; font-size: 105%;">FSM_T</span>* <span style="color: #ffd700;">me</span>, <span style="color: #ffff00; font-size: 105%;">SignalName_T</span> <span style="color: #ffd700;">name</span>, <span style="color: #ffff00; font-size: 105%;">SignalValue_T</span> <span style="color: #ffd700;">val</span>);
@@ -971,8 +971,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orgcd5292c" class="outline-4">
-<h4 id="orgcd5292c"><span class="section-number-4">2.3.4</span> 状态定义</h4>
+<div id="outline-container-org4c88243" class="outline-4">
+<h4 id="org4c88243"><span class="section-number-4">2.3.4</span> 状态定义</h4>
 <div class="outline-text-4" id="text-2-3-4">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr">1: </span><span style="color: #ffb6c1; font-size: 105%;">typedef</span> <span style="color: #ffb6c1; font-size: 105%;">struct</span> <span style="color: #ffff00; font-size: 105%;">_sta</span>
@@ -984,8 +984,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org372f279" class="outline-4">
-<h4 id="org372f279"><span class="section-number-4">2.3.5</span> 状态转换函数</h4>
+<div id="outline-container-org502fe92" class="outline-4">
+<h4 id="org502fe92"><span class="section-number-4">2.3.5</span> 状态转换函数</h4>
 <div class="outline-text-4" id="text-2-3-5">
 <ul class="org-ul">
 <li><p>
@@ -1014,15 +1014,15 @@ numpy.angle()计算</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org49b1ef7" class="outline-3">
-<h3 id="org49b1ef7"><span class="section-number-3">2.4</span> 应用</h3>
+<div id="outline-container-org2db2697" class="outline-3">
+<h3 id="org2db2697"><span class="section-number-3">2.4</span> 应用</h3>
 <div class="outline-text-3" id="text-2-4">
 </div>
-<div id="outline-container-org08183ef" class="outline-4">
-<h4 id="org08183ef"><span class="section-number-4">2.4.1</span> 状态机转换</h4>
+<div id="outline-container-orgd78e941" class="outline-4">
+<h4 id="orgd78e941"><span class="section-number-4">2.4.1</span> 状态机转换</h4>
 <div class="outline-text-4" id="text-2-4-1">
 
-<div id="org0ea8edd" class="figure">
+<div id="org51a5546" class="figure">
 <p><img src="./img/stmch_app.png" alt="stmch_app.png" />
 </p>
 <p><span class="figure-number">Figure 1: </span>状态机应用</p>
@@ -1030,8 +1030,8 @@ numpy.angle()计算</li>
 </div>
 </div>
 
-<div id="outline-container-orgb611ccf" class="outline-4">
-<h4 id="orgb611ccf"><span class="section-number-4">2.4.2</span> 源码</h4>
+<div id="outline-container-org4fcaa48" class="outline-4">
+<h4 id="org4fcaa48"><span class="section-number-4">2.4.2</span> 源码</h4>
 <div class="outline-text-4" id="text-2-4-2">
 <div class="org-src-container">
 <pre class="src src-c"><span class="linenr"> 1: </span><span style="color: #90ee90; font-style: italic;">//</span><span style="color: #90ee90; font-style: italic;">GetKeyState:windows api&#30417;&#27979;&#38190;&#30424;&#25353;&#38190;</span>
@@ -1136,7 +1136,7 @@ numpy.angle()计算</li>
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2020-04-23 周四 18:51</p>
+<p class="date">Created: 2020-05-28 周四 21:33</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
